--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/TestDistanceCalculator
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -8,4 +8,3 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto = none
 
 spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
